# lighthouse

./: .pre-commit-config.yaml  pyproject.toml
model/configs/: atwork_subtour_frequency.yaml  joint_tour_composition.csv  joint_tour_composition.yaml  joint_tour_destination.yaml  joint_tour_frequency.csv  joint_tour_frequency.yaml  joint_tour_frequency_coefficients.csv  joint_tour_participation.yaml  joint_tour_participation_coefficients.csv  joint_tour_scheduling.yaml  non_mandatory_tour_scheduling.yaml  settings.yaml  tour_scheduling_atwork.csv  write_data_dictionary.yaml
model/configs_mp/: settings.yaml
model/data/: example_hwy_data.parquet  households.parquet  land_use.parquet  override_hh_ids.parquet  persons.parquet  skims.omx
notebooks/: development.ipynb
src/lighthouse/: __init__.py
