[project]
name = "lighthouse"
version = "0.1.0"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "activitysim",
    "sharrow",
]

[build-system]
requires = [
    "setuptools>=69",
    "wheel",
    "setuptools_scm>=8.0",
]
build-backend = "setuptools.build_meta"


[dependency-groups]
dev = [
    "altair",
    "autodoc_pydantic",
    "asv",  # for benchmarking
    "black==22.12.0",
    "bump2version",  # for making a release
    "coveralls>=3.3.1",
    "dask==2023.11",
    "descartes",
    "filelock",
    "fsspec",
    "geopandas",
    "gh",
    "ipykernel",  # so this env will appear in jupyter as a selection
    "isort==5.12.0",
    "jupyter-book",
    "jupyterlab",
    "larch>=6.0.46",
    "matplotlib",
    "myst-nb",
    "myst-parser",  # allows markdown in sphinx
    "nbconvert",
    "nbformat",
    "nbmake",
    "numexpr",
    "numpydoc",
    "pre-commit",
    "pycodestyle",
    "pydata-sphinx-theme",
    "pydot>=4.0.1",
    "pyinstrument==4.4",
    "pytest>=8.4.2",
    "pytest-cov",
    "pytest-regressions",
    "requests>=2.32.3",
    "rich==13.3",
    "ruby",  # for benchmarking pre-commit hooks
    "ruff",
    "setuptools_scm",
    "simwrapper > 1.7",
    "snakeviz",  # for profiling
    "sphinx==6.1",
    "sphinx-argparse",
    "sphinx-autosummary-accessors",
    "sphinx-copybutton",
    "sphinx-remove-toctrees",
    "sphinx_rtd_theme==1.2",
    "sphinx-argparse==0.4",
    "xlsxwriter==3.2.5",
    "xmle",
    "wring",
    "zarr>=2,<3",
    "zstandard"
]
